@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    abstract class com.company.BuilderPizza {
        {abstract} + buildMasa()
        {abstract} + buildRelleno()
        {abstract} + buildSalsa()
        + crearPizza()
        + getPizza()
    }
  }
  

  namespace com.company {
    class com.company.Cocina {
        + construirPizza()
        + getPizza()
        + setBuilderPizza()
    }
  }
  

  namespace com.company {
    class com.company.ConcreteBuilderHawai {
        + buildMasa()
        + buildRelleno()
        + buildSalsa()
    }
  }
  

  namespace com.company {
    class com.company.ConcreteBuilderPicante {
        + buildMasa()
        + buildRelleno()
        + buildSalsa()
    }
  }
  

  namespace com.company {
    class com.company.Main {
        {static} + main()
    }
  }
  

  namespace com.company {
    class com.company.Pizza {
        - masa : String
        - relleno : String
        - salsa : String
        + setMasa()
        + setRelleno()
        + setSalsa()
    }
  }
  

  com.company.BuilderPizza o-- com.company.Pizza : pizza
  com.company.Cocina o-- com.company.BuilderPizza : builderPizza
  com.company.ConcreteBuilderHawai -up-|> com.company.BuilderPizza
  com.company.ConcreteBuilderPicante -up-|> com.company.BuilderPizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
